--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,7 @@
       href="https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
     <title>React App</title>
   </head>
   <body>
