--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
-    <title>My Profile</title>
+    <title>kiyokiyo</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
